--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "Sync Plex anime library to AniList or MyAnimeList",
   "main": "src/index.ts",
   "scripts": {
-    "start:dev": "nodemon"
+    "dev": "concurrently \"nodemon\" \"npm run start -w frontend\"",
+    "start": "",
+    "build": "npm run build -w frontend"
   },
   "repository": {
     "type": "git",
@@ -28,10 +30,14 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "concurrently": "^6.4.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fast-xml-parser": "^4.0.0-beta.3",
     "graphql": "^16.0.1",
     "sqlite": "^4.0.23"
-  }
+  },
+  "workspaces": [
+    "./frontend/", "."
+  ]
 }
