--- a/package.json
+++ b/package.json
@@ -5,15 +5,27 @@
   "description": "Sync Plex anime library to AniList or MyAnimeList",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "concurrently \"nodemon\" \"npm run start -w frontend\"",
-    "start": "",
-    "build": "npm run build -w frontend"
+    "dev": "run-p clean dev:*",
+    "dev:backend": "nodemon",
+    "dev:frontend": "npm run start -w frontend",
+    "start": "run-s clean start:*",
+    "start:backend": "tsc --build",
+    "start:frontend": "npm run build -w frontend",
+    "start:full": "NODE_ENV=production node build/index.js",
+    "clean": "rimraf build && rimraf frontend/build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Redstoneguy129/Ani4Plex.git"
   },
-  "keywords": [],
+  "keywords": [
+    "Plex",
+    "Anilist",
+    "MyAnimeList",
+    "React",
+    "Express",
+    "Full-Stack"
+  ],
   "author": "Cameron Whyte",
   "license": "GPL-3.0",
   "bugs": {
@@ -25,12 +37,13 @@
     "@types/graphql": "^14.5.0",
     "@types/node": "^16.11.10",
     "nodemon": "^2.0.15",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "concurrently": "^6.4.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fast-xml-parser": "^4.0.0-beta.3",
@@ -38,6 +51,7 @@
     "sqlite": "^4.0.23"
   },
   "workspaces": [
-    "./frontend/", "."
+    "./frontend/",
+    "."
   ]
 }
