--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "./tsconfig.paths.json",
   "compilerOptions": {
     "target": "es5",
     "lib": [
@@ -26,5 +27,6 @@
   },
   "include": [
     "src"
-  ]
+  ],
+  "skipLibCheck": true
 }
