--- a/frontend/tsconfig.paths.json
+++ b/frontend/tsconfig.paths.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "paths": {
             "@mui/styled-engine": [
-                "./node_modules/@mui/styled-engine-sc"
+                "../node_modules/@mui/styled-engine-sc"
             ]
         }
     }
