--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ani4plex",
   "version": "0.1.0",
   "private": true,
-  "description": "Sync Plex anime library to AniList or MyAnimeList",
+  "description": "Sync your Anime content library to your favourite leaderboard and listing services.",
   "main": "src/index.ts",
   "scripts": {
     "dev": "run-p clean dev:*",
@@ -19,9 +19,6 @@
     "url": "git+https://github.com/Redstoneguy129/Ani4Plex.git"
   },
   "keywords": [
-    "Plex",
-    "Anilist",
-    "MyAnimeList",
     "React",
     "Express",
     "Full-Stack"
@@ -32,23 +29,40 @@
     "url": "https://github.com/Redstoneguy129/Ani4Plex/issues"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "@types/graphql": "^14.5.0",
+    "@types/jest": "^26.0.15",
     "@types/node": "^16.11.10",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.0",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "web-vitals": "^1.0.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.2",
+    "@mui/styled-engine-sc": "^5.1.0",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fast-xml-parser": "^4.0.0-beta.3",
     "graphql": "^16.0.1",
-    "sqlite": "^4.0.23"
+    "http-proxy-middleware": "^2.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "sqlite": "^4.0.23",
+    "styled-components": "^5.3.3"
   },
   "workspaces": [
     "./frontend/",
