--- a/Sāba/package.json
+++ b/Sāba/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc --build && mv build ../build/Sāba",
+    "start": "NODE_ENV=production node ../build/Sāba/index.js",
     "installQ": "npm install"
   },
   "devDependencies": {
