--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
         "dev:saba": "npm run dev -w Sāba",
         "dev:saito": "npm run dev -w Saito",
         "start": "run-s build start:now",
-        "start:now": "NODE_ENV=production node build/Sāba/index.js",
+        "start:now": "npm run start -w Sāba",
         "build": "run-s clean build:*",
+        "build:create": "mkdir build",
         "build:saba": "npm run build -w Sāba",
         "build:saito": "npm run build -w Saito",
         "clean": "rimraf build",
@@ -19,8 +20,20 @@
         "installQ:saito": "npm run installQ -w Saito"
     },
     "devDependencies": {
-        "npm-run-all": "^4.1.5",
-        "rimraf": "^3.0.2"
+      "@types/axios": "^0.14.0",
+      "@types/express": "^4.17.13",
+      "nodemon": "^2.0.15",
+      "ts-node": "^10.4.0",
+      "typescript": "^4.5.2",
+      "npm-run-all": "^4.1.5",
+      "rimraf": "^3.0.2"
+    },
+    "dependencies": {
+      "axios": "^0.24.0",
+      "dotenv": "^10.0.0",
+      "express": "^4.17.1",
+      "fast-xml-parser": "^4.0.0-beta.3",
+      "sqlite": "^4.0.23"
     },
     "keywords": [
       "React",
