--- a/Saito/package.json
+++ b/Saito/package.json
@@ -1,8 +1,8 @@
 {
   "name": "saito",
   "scripts": {
-    "dev": "react-scripts start",
-    "build": "BUILD_PATH='../build/Saito' react-scripts build",
+    "dev": "craco start",
+    "build": "BUILD_PATH='../build/Saito' craco build",
     "installQ": "npm install"
   },
   "devDependencies": {
@@ -13,17 +13,15 @@
     "@types/node": "^16.11.10",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.0",
+    "autoprefixer": "^9.8.8",
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.0",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.2.0",
-    "@mui/material": "^5.2.2",
-    "@mui/styled-engine-sc": "^5.1.0",
+    "@craco/craco": "^6.4.2",
     "http-proxy-middleware": "^2.0.1",
-    "styled-components": "^5.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3"
